fix: 포트번호 지정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -26,14 +26,14 @@ input {
 filter {
 
   ###########################################################################
-  # 0) 원본 보존 (사후 분석/보고서용)
+  # 0 원본 보존 (사후 분석/보고서용)
   ###########################################################################
   mutate {
     add_field => { "[@metadata][raw_message]" => "%{message}" }
   }
 
   ###########################################################################
-  # 1) CloudWatch/Kinesis payload decode (3-case)
+  # 1 CloudWatch/Kinesis payload decode (3-case)
   #   Case A: JSON {"awslogs":{"data":"base64(gzip(json))"}}
   #   Case B: raw gzip bytes (message begins with 1F 8B)
   #   Case C: base64-only string that decodes to gzip(json)
@@ -121,7 +121,7 @@ filter {
   }
 
   ###########################################################################
-  # 2) cw_payload JSON 파싱
+  # 2 cw_payload JSON 파싱
   ###########################################################################
   if [@metadata][cw_payload] {
     json {
@@ -132,7 +132,7 @@ filter {
   }
 
   ###########################################################################
-  # 3) logEvents 분해 + message 치환
+  # 3 logEvents 분해 + message 치환
   ###########################################################################
   if [cw][logEvents] {
     split { field => "[cw][logEvents]" }
@@ -151,7 +151,7 @@ filter {
   }
 
   ###########################################################################
-  # 4) Apache Combined grok (cw logEvents로 정규화된 message만)
+  # 4 Apache Combined grok (cw logEvents로 정규화된 message만)
   ###########################################################################
   if "no_cw_logevents" not in [tags] and "cw_decode_failed" not in [tags] and "cw_control_message" not in [tags] {
     grok {
@@ -164,7 +164,7 @@ filter {
   }
 
   ###########################################################################
-  # 5) URL 파싱 / GeoIP (web_parsed 성공 시에만)
+  # 5 URL 파싱 / GeoIP (web_parsed 성공 시에만)
   ###########################################################################
   if "web_parsed" in [tags] and [url][original] {
     ruby {
@@ -190,7 +190,7 @@ filter {
   }
 
   ###########################################################################
-  # 6) 공통 필드
+  # 6 공통 필드
   ###########################################################################
   mutate {
     add_field => {
@@ -204,7 +204,7 @@ filter {
   }
 
   ###########################################################################
-  # 7) outcome (web_parsed일 때만)
+  # 7 outcome (web_parsed일 때만)
   ###########################################################################
   if "web_parsed" in [tags] and [http][response][status_code] {
     ruby {
@@ -224,7 +224,7 @@ output {
   # 정상 인덱스: cw_control, decode_failed, no_logevents 제외
   if "cw_control_message" not in [tags] and "cw_decode_failed" not in [tags] and "no_cw_logevents" not in [tags] {
     opensearch {
-      hosts => ["https://${OPENSEARCH_HOST}"]
+      hosts => ["https://${OPENSEARCH_HOST}:443"]
       index => "2sec-siem-%{+yyyy.MM.dd}"
       auth_type => { type => "aws_iam" region => "${AWS_REGION}" }
       ecs_compatibility => disabled
