--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -233,7 +233,7 @@ output {
   } else {
     # 격리 인덱스(Deadletter): 원본(raw_message) + reason 보존
     opensearch {
-      hosts => ["https://${OPENSEARCH_HOST}"]
+      hosts => ["https://${OPENSEARCH_HOST}:443"]
       index => "2sec-siem-deadletter-%{+yyyy.MM.dd}"
       auth_type => { type => "aws_iam" region => "${AWS_REGION}" }
       ecs_compatibility => disabled
