fix: ASCII-8BIT

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -14,7 +14,8 @@ input {
     application_name    => "${APPLICATION_NAME}"
 
     # Kinesis 레코드를 문자열로 받되, 바이너리 깨짐 방지를 위해 ISO-8859-1로 1:1 매핑
-    codec => plain { charset => "ISO-8859-1" }
+    # => 바이너리 데이터를 1:1로 보존해서 압축 해제하도록 ASCII-8BIT로 변경
+    codec => plain { charset => "ASCII-8BIT" }
 
     tags => ["kinesis", "cloudwatch"]
   }
