feat: logstash 필터 추가

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -14,17 +14,91 @@ input {
 }
 
 filter {
+
   mutate {
     add_field => {
       "ingest_source" => "kinesis"
     }
   }
 
-  # JSON 파싱
+  # =========================
+  # CloudWatch JSON 파싱
+  # =========================
   json {
     source => "message"
     target => "parsed"
     tag_on_failure => ["_jsonparsefailure"]
+  }
+
+  # =========================
+  # 실제 로그 메시지 추출
+  # =========================
+  if [parsed][logEvents] {
+    mutate {
+      rename => {
+        "[parsed][logEvents][0][message]" => "raw_message"
+      }
+    }
+  }
+
+  # =========================
+  # Web Access Log 파싱
+  # =========================
+  grok {
+    match => {
+      "raw_message" => "%{COMBINEDAPACHELOG}"
+    }
+    tag_on_failure => ["_grok_web_failed"]
+  }
+
+  # =========================
+  # 필드 정규화 (SIEM 스키마)
+  # =========================
+  mutate {
+    rename => {
+      "clientip" => "client_ip"
+      "verb"     => "method"
+      "response" => "status_code"
+      "agent"    => "user_agent"
+    }
+  }
+
+  # =========================
+  # URL / Query 분리
+  # =========================
+  grok {
+    match => {
+      "request" => "%{URIPATH:url}(?:\?%{DATA:query})?"
+    }
+  }
+
+  # =========================
+  # GeoIP
+  # =========================
+  geoip {
+    source => "client_ip"
+    target => "geoip"
+  }
+
+  # =========================
+  # 공격 패턴 탐지 (1차)
+  # =========================
+  if [query] =~ "(?i)(union select|or 1=1|--|'|\")" {
+    mutate {
+      add_field => {
+        "attack_pattern" => "SQLi_suspected"
+      }
+    }
+  } else {
+    mutate {
+      add_field => {
+        "attack_pattern" => "none"
+      }
+    }
+  }
+
+  mutate {
+    add_tag => ["web", "dvwa"]
   }
 }
 
@@ -46,7 +120,7 @@ output {
   # =========================
   # 디버깅용 (같이 써도 됨)
   # =========================
-  #stdout {
-  #  codec => rubydebug
-  #}
+  stdout {
+    codec => rubydebug
+  }
 }
