--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -28,11 +28,8 @@ filter {
   json {
     source         => "message"
     target         => "parsed"
-    tag_on_failure => ["_jsonparsefailure"]
+    tag_on_failure => ["_cloudwatch_json_failure"]
   }
-
-  # JSON 파싱 실패는 일단 남기고(디버깅), 운영에서는 drop 고려 가능
-  # if "_jsonparsefailure" in [tags] { drop {} }
 
   # --------------------------------------------------
   # dvwa-app 로그만 대상으로 처리 (⭐ split 전에 drop)
@@ -74,6 +71,7 @@ filter {
   # --------------------------------------------------
   grok {
     match => { "raw_message" => "%{COMBINEDAPACHELOG}" }
+    remove_field => ["timestamp"]
     tag_on_failure => ["_grok_web_failed"]
   }
 
@@ -100,41 +98,19 @@ filter {
     }
   }
 
-  # request 필드에서 path/query 분리
-  # request 예: "/index.php?id=1"
-  # COMBINEDAPACHELOG에서는 request 필드가 "GET /... HTTP/1.1"이 아니라
-  # "request" 필드는 일반적으로 "/path?query" 형태로 들어오기도 하는데,
-  # 환경마다 달라서 둘 다 커버하도록 처리합니다.
-
-  # 1) request가 "/path?query" 형태인 경우
-  if [request] {
-    grok {
-      match => { "request" => "^%{URIPATH:url.path}(?:\?%{DATA:url.query})?$" }
+ grok {
+    match => {
+      "raw_message" =>
+        "\"%{WORD:[http][request][method]} %{URIPATH:url.path}(?:\?%{DATA:url.query})? HTTP/%{NUMBER:http.version}\""
     }
   }
 
-  # 2) raw_message에서 "GET /path?query HTTP/1.1" 형태로 들어오는 경우 대비
-  if ![url][path] and [raw_message] {
-    grok {
-      match => { "raw_message" => "\"%{WORD:[http][request][method]} %{URIPATH:url.path}(?:\?%{DATA:url.query})? HTTP/%{NUMBER:http.version}\"" }
-    }
-  } else {
-    # http.version은 raw_message에서 별도로 추출
-    grok {
-      match => { "raw_message" => "HTTP/%{NUMBER:http.version}" }
-    }
-  }
-
-  # url.original 재구성 (path + ? + query)
   if [url][path] and [url][query] {
     mutate { replace => { "[url][original]" => "%{[url][path]}?%{[url][query]}" } }
   } else if [url][path] {
     mutate { replace => { "[url][original]" => "%{[url][path]}" } }
   }
 
-  # --------------------------------------------------
-  # GeoIP
-  # --------------------------------------------------
   if [source][address] {
     geoip {
       source => "[source][address]"
@@ -142,18 +118,6 @@ filter {
     }
   }
 
-  # --------------------------------------------------
-  # 공격 패턴 탐지 (1차 - SQLi)
-  # --------------------------------------------------
-  if [url][query] and [url][query] =~ "(?i)(union\s+select|or\s+1=1|--|/\*|\*/|'|\")" {
-    mutate { add_field => { "attack_pattern" => "SQLi_suspected" } }
-  } else {
-    mutate { add_field => { "attack_pattern" => "none" } }
-  }
-
-  # --------------------------------------------------
-  # 태그
-  # --------------------------------------------------
   mutate {
     add_tag => ["web", "dvwa"]
   }
@@ -172,7 +136,4 @@ output {
     ecs_compatibility => disabled
     manage_template   => false
   }
-
-  # 디버깅 필요할 때만 주석 해제
-  # stdout { codec => rubydebug }
 }
