--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -163,7 +163,7 @@ filter {
     
     # 조건 2: XSS 패턴 매칭
     if [url][query] =~ /(?i)(script|javascript|onload|onerror|onclick|alert|prompt|confirm|eval|%3C|&lt;)/ {
-         
+
       mutate {
         add_field => {
           "attack_category"  => "Client-side"
@@ -181,13 +181,11 @@ filter {
 # --------------------------------------------------
   
   # Path Traversal 패턴 탐지 (GET, POST 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-  ([http][response][status_code] == "200" or [http][response][status_code] == "403" or 
-  [http][response][status_code] == "404" or [http][response][status_code] == "500") {
+  if ([http][request][method] == "GET" or [http][request][method] == "POST") and ([http][response][status_code] == "200" or [http][response][status_code] == "403" or [http][response][status_code] == "404" or [http][response][status_code] == "500") {
  
     # URL 경로에서 디렉터리 이동 패턴 확인
-    if ([url][path] and [url][path] =~ /(?i)(\.\.\/|\.\.\\|%2e%2e%2f|%2e%2e%5c|\.\.%2f|\.\.%5c)/) or
-       ([url][query] and [url][query] =~ /(?i)(\.\.\/|\.\.\\|%2e%2e%2f|%2e%2e%5c|\.\.%2f|\.\.%5c|\/etc\/passwd|\/etc\/hosts|boot\.ini|\\windows\\system32|\\boot\.ini|file=.*\.\.|page=.*\.\.|path=.*\.\.)/) {
+    if ([url][path] and [url][path] =~ /(?i)(\.\.\/|%2e%2e|\.\.%2f|\.\.%5c)/) or
+       ([url][query] and [url][query] =~ /(?i)(\.\.\/|%2e%2e|\/etc\/passwd|\/etc\/hosts|boot\.ini|windows|file=\.\.|page=\.\.|path=\.\.)/) {
       mutate {
         add_field => {
           "attack_category"  => "File Access"
@@ -209,7 +207,7 @@ filter {
     ([http][request][method] == "GET" or [http][request][method] == "POST") and 
     ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
  
-    if [url][query] =~ /(?i)(;\s*(whoami|id|ls|cat|pwd|uname)|\|\s*(whoami|id|ls|cat)|`(whoami|id|ls|cat)`|\$\((whoami|id|ls)\)|%3b(whoami|id|ls)|%7c(whoami|id|ls)|&&\s*(whoami|id))/ {
+    if [url][query] =~ /(?i)(;whoami|;id|;ls|;cat|;pwd|\|whoami|\|id|\|ls|%3bwhoami|%3bid|%7cwhoami|%7cid|&&whoami|&&id)/ {
     
       mutate {
         add_field => {
@@ -337,6 +335,7 @@ filter {
       add_tag => ["normal_request"]
     }
   }
+}
 
 output {
   opensearch {
