--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -135,10 +135,8 @@ filter {
 # --------------------------------------------------
 
   # SQL Injection 패턴 탐지 (GET, POST 요청 대상)
-  if [url][query] and 
-  ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-  ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
-  
+  if ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
+
     if [url][query] =~ /(?i)(union\s+select|'\s*or\s+1\s*=\s*1|\'\s*or\s+\'\s*1\s*\'\s*=\s*\'\s*1|;\s*drop\s+table|;\s*delete\s+from|admin\'\s*--|\'\s*;\s*--|benchmark\(|sleep\(|waitfor\s+delay|information_schema)/ {
       mutate {
         add_field => {
@@ -157,10 +155,8 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: Query 파라미터 존재 + HTTP 메소드(GET/POST) + 응답코드(200/500)
-  if [url][query] and 
-    ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-    ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
-    
+  if [url][query] and ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
+
     # 조건 2: XSS 패턴 매칭
     if [url][query] =~ /(?i)(script|javascript|onload|onerror|onclick|alert|prompt|confirm|eval|%3C|&lt;)/ {
 
@@ -181,8 +177,8 @@ filter {
 # --------------------------------------------------
   
   # Path Traversal 패턴 탐지 (GET, POST 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST") and ([http][response][status_code] == "200" or [http][response][status_code] == "403" or [http][response][status_code] == "404" or [http][response][status_code] == "500") {
- 
+  if ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 403 or [http][response][status_code] == 404 or [http][response][status_code] == 500) {
+
     # URL 경로에서 디렉터리 이동 패턴 확인
     if ([url][path] and [url][path] =~ /(?i)(\.\.\/|%2e%2e|\.\.%2f|\.\.%5c)/) or
        ([url][query] and [url][query] =~ /(?i)(\.\.\/|%2e%2e|\/etc\/passwd|\/etc\/hosts|boot\.ini|windows|file=\.\.|page=\.\.|path=\.\.)/) {
@@ -203,9 +199,7 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: Query 파라미터 존재 + HTTP 메소드(GET/POST) + 응답코드(200/500)
-  if [url][query] and 
-    ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-    ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
+  if [url][query] and ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
  
     if [url][query] =~ /(?i)(;whoami|;id|;ls|;cat|;pwd|\|whoami|\|id|\|ls|%3bwhoami|%3bid|%7cwhoami|%7cid|&&whoami|&&id)/ {
     
@@ -226,9 +220,8 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: HTTP 메소드(GET/HEAD) + 응답코드(404/403)
-  if ([http][request][method] == "GET" or [http][request][method] == "HEAD") and 
-    ([http][response][status_code] == "404" or [http][response][status_code] == "403") {
-  
+  if ("GET" in [http][request][method] or "HEAD" in [http][request][method]) and ([http][response][status_code] == 404 or [http][response][status_code] == 403) {
+
   # 조건 2: 민감 경로 접근 또는 스캐너 User-Agent 탐지
     # 민감 경로 접근 탐지
     if ([url][path] and [url][path] =~ /(?i)(\/phpmyadmin|\/wp-admin|\/admin|\/config|\/backup|\/test|\/debug|\/phpinfo|\/manager|\/console|\/login|\/wp-login|\/administrator|\/webmin|\/cpanel|\/mysql|\/database|\.bak|\.sql|\.zip)/) or
@@ -251,8 +244,8 @@ filter {
 # --------------------------------------------------
   
   # 404 상태코드 기반 정찰 행위 탐지 (GET, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "HEAD") and [http][response][status_code] == "404" {
-    mutate {
+  if ("GET" in [http][request][method] or "HEAD" in [http][request][method]) and [http][response][status_code] == 404 {
+   mutate {
       add_field => {
         "attack_category"  => "Reconnaissance"
         "attack_type"      => "Repeated 404 Access"
@@ -268,7 +261,8 @@ filter {
 # --------------------------------------------------
   
   # 의심스러운 User-Agent 탐지 (GET, POST, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST" or [http][request][method] == "HEAD") and [user_agent][original] {
+  if ("GET" in [http][request][method] or "POST" in [http][request][method] or "HEAD" in [http][request][method]) and [user_agent][original] {
+  
     if [user_agent][original] =~ /(?i)(sqlmap|nikto|nmap|dirb|dirbuster|gobuster|wfuzz|burp|w3af|curl|wget|python-requests|libwww|Go-http-client|Java\/|scanner|bot|crawl|masscan|zmap|nuclei|acunetix|nessus|openvas|whatweb|httpx|subfinder)/ {
       mutate {
         add_field => {
@@ -287,9 +281,8 @@ filter {
 # --------------------------------------------------
   
   # 조건 1: HTTP 메소드(POST/GET) + 인증 경로 + 응답코드(401/403/200)
-  if ([http][request][method] == "POST" or [http][request][method] == "GET") and [url][path] and
-    ([http][response][status_code] == "401" or [http][response][status_code] == "403" or [http][response][status_code] == "200") {
-  
+  if ("POST" in [http][request][method] or "GET" in [http][request][method]) and [url][path] and ([http][response][status_code] == 401 or [http][response][status_code] == 403 or [http][response][status_code] == 200) {
+
   # 조건 2: 로그인 관련 경로 패턴 매칭
     if [url][path] =~ /(?i)(\/login\.php|\/login|\/auth|\/signin|\/sign-in|\/logon|\/authentication|\/user\/login|\/admin\/login|\/wp-login|\/account\/login|\/portal\/login|\/system\/login)/ {
       mutate {
@@ -309,7 +302,8 @@ filter {
 # --------------------------------------------------
   
   # Slow Request / 408 Timeout 탐지 (GET, POST, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST" or [http][request][method] == "HEAD") and [http][response][status_code] == "408" {
+  if ("GET" in [http][request][method] or "POST" in [http][request][method] or "HEAD" in [http][request][method]) and [http][response][status_code] == 408 {
+    
     mutate {
       add_field => {
         "attack_category"  => "Availability"
