Restore dev to state at 7d37337

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -59,16 +59,6 @@ filter {
     }
   }
 
-  ###########################################################################
-  # 4 Apache Combined grok (cw logEvents로 정규화된 message만)
-  ###########################################################################
-  if "no_cw_logevents" not in [tags] and "cw_decode_failed" not in [tags] and "cw_control_message" not in [tags] {
-    grok {
-      match => {
-        "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \\[%{HTTPDATE:[http][timestamp]}\\] \"%{WORD:[http][request][method]} %{NOTSPACE:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-) \"(?:%{NOTSPACE:[http][request][referrer]}|-)\" \"%{DATA:[user_agent][original]}\""
-      }
-      add_tag => ["web_parsed"]
-      ecs_compatibility => disabled
   # --------------------------------------------------
   # 실제 웹 로그 메시지 추출
   # --------------------------------------------------
@@ -145,10 +135,8 @@ filter {
 # --------------------------------------------------
 
   # SQL Injection 패턴 탐지 (GET, POST 요청 대상)
-  if [url][query] and 
-  ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-  ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
-  
+  if ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
+
     if [url][query] =~ /(?i)(union\s+select|'\s*or\s+1\s*=\s*1|\'\s*or\s+\'\s*1\s*\'\s*=\s*\'\s*1|;\s*drop\s+table|;\s*delete\s+from|admin\'\s*--|\'\s*;\s*--|benchmark\(|sleep\(|waitfor\s+delay|information_schema)/ {
       mutate {
         add_field => {
@@ -167,10 +155,8 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: Query 파라미터 존재 + HTTP 메소드(GET/POST) + 응답코드(200/500)
-  if [url][query] and 
-    ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-    ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
-    
+  if [url][query] and ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
+
     # 조건 2: XSS 패턴 매칭
     if [url][query] =~ /(?i)(script|javascript|onload|onerror|onclick|alert|prompt|confirm|eval|%3C|&lt;)/ {
 
@@ -191,8 +177,8 @@ filter {
 # --------------------------------------------------
   
   # Path Traversal 패턴 탐지 (GET, POST 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST") and ([http][response][status_code] == "200" or [http][response][status_code] == "403" or [http][response][status_code] == "404" or [http][response][status_code] == "500") {
- 
+  if ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 403 or [http][response][status_code] == 404 or [http][response][status_code] == 500) {
+
     # URL 경로에서 디렉터리 이동 패턴 확인
     if ([url][path] and [url][path] =~ /(?i)(\.\.\/|%2e%2e|\.\.%2f|\.\.%5c)/) or
        ([url][query] and [url][query] =~ /(?i)(\.\.\/|%2e%2e|\/etc\/passwd|\/etc\/hosts|boot\.ini|windows|file=\.\.|page=\.\.|path=\.\.)/) {
@@ -213,9 +199,7 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: Query 파라미터 존재 + HTTP 메소드(GET/POST) + 응답코드(200/500)
-  if [url][query] and 
-    ([http][request][method] == "GET" or [http][request][method] == "POST") and 
-    ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
+  if [url][query] and ("GET" in [http][request][method] or "POST" in [http][request][method]) and ([http][response][status_code] == 200 or [http][response][status_code] == 500) {
  
     if [url][query] =~ /(?i)(;whoami|;id|;ls|;cat|;pwd|\|whoami|\|id|\|ls|%3bwhoami|%3bid|%7cwhoami|%7cid|&&whoami|&&id)/ {
     
@@ -236,9 +220,8 @@ filter {
 # --------------------------------------------------
 
   # 조건 1: HTTP 메소드(GET/HEAD) + 응답코드(404/403)
-  if ([http][request][method] == "GET" or [http][request][method] == "HEAD") and 
-    ([http][response][status_code] == "404" or [http][response][status_code] == "403") {
-  
+  if ("GET" in [http][request][method] or "HEAD" in [http][request][method]) and ([http][response][status_code] == 404 or [http][response][status_code] == 403) {
+
   # 조건 2: 민감 경로 접근 또는 스캐너 User-Agent 탐지
     # 민감 경로 접근 탐지
     if ([url][path] and [url][path] =~ /(?i)(\/phpmyadmin|\/wp-admin|\/admin|\/config|\/backup|\/test|\/debug|\/phpinfo|\/manager|\/console|\/login|\/wp-login|\/administrator|\/webmin|\/cpanel|\/mysql|\/database|\.bak|\.sql|\.zip)/) or
@@ -261,8 +244,8 @@ filter {
 # --------------------------------------------------
   
   # 404 상태코드 기반 정찰 행위 탐지 (GET, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "HEAD") and [http][response][status_code] == "404" {
-    mutate {
+  if ("GET" in [http][request][method] or "HEAD" in [http][request][method]) and [http][response][status_code] == 404 {
+   mutate {
       add_field => {
         "attack_category"  => "Reconnaissance"
         "attack_type"      => "Repeated 404 Access"
@@ -278,7 +261,8 @@ filter {
 # --------------------------------------------------
   
   # 의심스러운 User-Agent 탐지 (GET, POST, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST" or [http][request][method] == "HEAD") and [user_agent][original] {
+  if ("GET" in [http][request][method] or "POST" in [http][request][method] or "HEAD" in [http][request][method]) and [user_agent][original] {
+  
     if [user_agent][original] =~ /(?i)(sqlmap|nikto|nmap|dirb|dirbuster|gobuster|wfuzz|burp|w3af|curl|wget|python-requests|libwww|Go-http-client|Java\/|scanner|bot|crawl|masscan|zmap|nuclei|acunetix|nessus|openvas|whatweb|httpx|subfinder)/ {
       mutate {
         add_field => {
@@ -297,9 +281,8 @@ filter {
 # --------------------------------------------------
   
   # 조건 1: HTTP 메소드(POST/GET) + 인증 경로 + 응답코드(401/403/200)
-  if ([http][request][method] == "POST" or [http][request][method] == "GET") and [url][path] and
-    ([http][response][status_code] == "401" or [http][response][status_code] == "403" or [http][response][status_code] == "200") {
-  
+  if ("POST" in [http][request][method] or "GET" in [http][request][method]) and [url][path] and ([http][response][status_code] == 401 or [http][response][status_code] == 403 or [http][response][status_code] == 200) {
+
   # 조건 2: 로그인 관련 경로 패턴 매칭
     if [url][path] =~ /(?i)(\/login\.php|\/login|\/auth|\/signin|\/sign-in|\/logon|\/authentication|\/user\/login|\/admin\/login|\/wp-login|\/account\/login|\/portal\/login|\/system\/login)/ {
       mutate {
@@ -319,7 +302,8 @@ filter {
 # --------------------------------------------------
   
   # Slow Request / 408 Timeout 탐지 (GET, POST, HEAD 요청 대상)
-  if ([http][request][method] == "GET" or [http][request][method] == "POST" or [http][request][method] == "HEAD") and [http][response][status_code] == "408" {
+  if ("GET" in [http][request][method] or "POST" in [http][request][method] or "HEAD" in [http][request][method]) and [http][response][status_code] == 408 {
+    
     mutate {
       add_field => {
         "attack_category"  => "Availability"
@@ -343,190 +327,6 @@ filter {
         "attack_severity" => "info"
       }
       add_tag => ["normal_request"]
-    }
-  }
-
-  ###########################################################################
-  # 8 Attack Detection Rules (Classification Layer - Level 1)
-  ###########################################################################
-  if "web_parsed" in [tags] {
-
-    # 공통 필드 초기화
-    mutate {
-      add_field => {
-        "[detection][stage]"   => "classification"
-        "[detection][source]"  => "logstash"
-        "[detection][version]" => "v1.0"
-      }
-    }
-
-    # ----- WEB-SQLI-001: SQL Injection -----
-    if [url][query] =~ /(?i)(union\s+select|' or 1=1|' or '1'='1|sleep\(|benchmark\(|concat\(|group_concat\(|0x[0-9a-f]+|waitfor\s+delay|exec\(|execute\(|information_schema|sysobjects|syscolumns)/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-SQLI-001"
-          "[attack][type]"       => "SQL Injection"
-          "[attack][category]"   => "Injection"
-          "[attack][severity]"   => "medium"
-          "[attack][confidence]" => "medium"
-        }
-        add_tag => ["attack", "sqli"]
-      }
-    }
-
-    # ----- WEB-XSS-001: Cross-Site Scripting -----
-    if [url][query] =~ /(?i)(<script|<\/script>|javascript:|onerror=|onload=|onmouseover=|onfocus=|onblur=|onclick=|<img|<svg|<iframe|<object|<embed|%3Cscript|%3Cimg|%3Csvg|%3Ciframe|&#60;script&#62;|&#x3C;script&#x3E;)/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-XSS-001"
-          "[attack][type]"       => "Cross-Site Scripting"
-          "[attack][category]"   => "Client-Side"
-          "[attack][severity]"   => "medium"
-          "[attack][confidence]" => "medium"
-        }
-        add_tag => ["attack", "xss"]
-      }
-    }
-
-    # ----- WEB-CMD-001: Command Injection -----
-    if [url][query] =~ /(?i)(;|\||&&|\|\||`|\$\()(whoami|id|ls|cat|pwd|uname|hostname|ifconfig|netstat|ps|wget|curl|nc|bash|sh|dir|type|ipconfig|net|ping|tasklist|cmd|powershell)/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-CMD-001"
-          "[attack][type]"       => "Command Injection"
-          "[attack][category]"   => "Injection"
-          "[attack][severity]"   => "high"
-          "[attack][confidence]" => "high"
-        }
-        add_tag => ["attack", "cmdi"]
-      }
-    }
-
-    # ----- WEB-PATH-001: Path Traversal / LFI -----
-    if [url][path] =~ /\.\.\/|\.\.\\|%2e%2e/ or [url][query] =~ /(?i)(\.\.\/|\.\.\\|%2e%2e|\/etc\/passwd|boot\.ini|\/etc\/shadow|\/proc\/|C:\\|\.\.%2F)/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-PATH-001"
-          "[attack][type]"       => "Path Traversal"
-          "[attack][category]"   => "File Access"
-          "[attack][severity]"   => "medium"
-          "[attack][confidence]" => "medium"
-        }
-        add_tag => ["attack", "path_traversal"]
-      }
-    }
-
-    # ----- WEB-SCAN-001: Web Scanning -----
-    # 관리자 페이지, 민감 파일, 백업 경로, API 문서, 개발 경로 등 탐지
-    if [url][path] =~ /(?i)(\/phpmyadmin|\/wp-admin|\/wp-login\.php|\/admin|\/administrator|\/manager|\/control-panel|\/cpanel|\/\.git|\/\.env|\/\.env\.production|\/config|\/configuration\.php|\/wp-config\.php|\/settings\.py|\/backup|\/backup\.zip|\/backup\.tar\.gz|\/db_backup\.sql|\/\.bak|\/old|\/api|\/api\/v1|\/api\/swagger|\/api-docs|\/swagger-ui|\/graphql|\/graphql-playground|\/test|\/dev|\/debug|\/phpinfo\.php|\/info\.php|\/test\.php|\/server-status|\/server-info|\/status|\/health|\/metrics)/ and [http][response][status_code] =~ /^(403|404)$/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-SCAN-001"
-          "[attack][type]"       => "Web Scanning"
-          "[attack][category]"   => "Reconnaissance"
-          "[attack][severity]"   => "low"
-          "[attack][confidence]" => "low"
-        }
-        add_tag => ["attack", "scan"]
-      }
-    }
-
-    # ----- WEB-UA-001: Suspicious User-Agent -----
-    # 취약점 스캐너, 디렉터리 브루트포스, 스크립트 클라이언트, 봇 등 탐지
-    if [user_agent][original] =~ /(?i)(sqlmap|nikto|nmap|masscan|nessus|acunetix|nuclei|burp|zap|w3af|openvas|dirb|gobuster|wfuzz|dirsearch|ffuf|curl|wget|python-requests|python-urllib|Go-http-client|Apache-HttpClient|Java\/|libwww-perl|bot|spider|crawler|scraper|scanner|scrapy)/ {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-UA-001"
-          "[attack][type]"       => "Suspicious User-Agent"
-          "[attack][category]"   => "Reconnaissance"
-          "[attack][severity]"   => "low"
-          "[attack][confidence]" => "low"
-        }
-        add_tag => ["attack", "suspicious_ua"]
-      }
-    }
-
-    # 명시적 스캐너 UA는 confidence 상승
-    if [user_agent][original] =~ /(?i)(sqlmap|nikto|acunetix|nessus|nuclei|openvas)/ {
-      mutate {
-        update => { "[attack][confidence]" => "high" }
-        update => { "[attack][severity]" => "medium" }
-      }
-    }
-
-    # ----- WEB-404-001: Repeated 404 Access -----
-    if [http][response][status_code] == "404" {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-404-001"
-          "[attack][type]"       => "Repeated 404 Access"
-          "[attack][category]"   => "Reconnaissance"
-          "[attack][severity]"   => "low"
-          "[attack][confidence]" => "low"
-        }
-        add_tag => ["attack", "repeated_404"]
-      }
-    }
-
-    # ----- WEB-AUTH-001: Login Bruteforce -----
-    # 일반 로그인, 관리자 로그인, API 인증, CMS별 로그인 경로 탐지
-    if [url][path] =~ /(?i)(\/login\.php|\/login\.html|\/login|\/signin|\/sign-in|\/sign_in|\/logon|\/logon\.php|\/authenticate|\/authentication|\/auth|\/admin\/login|\/administrator\/login|\/wp-admin|\/wp-login\.php|\/manager\/login|\/control-panel\/login|\/api\/auth|\/api\/login|\/api\/v1\/authenticate|\/api\/v1\/token|\/oauth\/token|\/user\/login)/ and [http][request][method] == "POST" {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-AUTH-001"
-          "[attack][type]"       => "Login Bruteforce"
-          "[attack][category]"   => "Authentication Abuse"
-          "[attack][severity]"   => "high"
-          "[attack][confidence]" => "low"
-        }
-        add_tag => ["attack", "auth_bruteforce"]
-      }
-    }
-
-    # 관리자 로그인 경로는 severity 더 높게
-    if "auth_bruteforce" in [tags] and [url][path] =~ /(?i)(\/admin|\/administrator|\/wp-admin|\/manager)/ {
-      mutate {
-        update => { "[attack][severity]" => "critical" }
-      }
-    }
-
-    # ----- WEB-TIMEOUT-001: Slow Request / Timeout -----
-    if [http][response][status_code] == "408" {
-      mutate {
-        add_field => {
-          "[attack][rule_id]"    => "WEB-TIMEOUT-001"
-          "[attack][type]"       => "Slow Request"
-          "[attack][category]"   => "Availability"
-          "[attack][severity]"   => "medium"
-          "[attack][confidence]" => "low"
-        }
-        add_tag => ["attack", "timeout"]
-      }
-    }
-
-    # Confidence 조정 로직
-    if "attack" in [tags] {
-      ruby {
-        code => "
-          # 복수 공격 패턴 감지 시 confidence 상승
-          attack_tags = event.get('tags').select { |t| t =~ /^(sqli|xss|cmdi|path_traversal|scan|suspicious_ua|repeated_404|auth_bruteforce|timeout)$/ }
-
-          if attack_tags.length >= 2
-            event.set('[attack][confidence]', 'high')
-          end
-
-          # URL 인코딩이 포함된 경우 confidence 상승
-          url_query = event.get('[url][query]').to_s
-          if url_query =~ /%[0-9a-fA-F]{2}/
-            current_confidence = event.get('[attack][confidence]')
-            if current_confidence == 'low'
-              event.set('[attack][confidence]', 'medium')
-            elsif current_confidence == 'medium'
-              event.set('[attack][confidence]', 'high')
-            end
-          end
-        "
-      }
     }
   }
 }
