--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -98,6 +98,12 @@ filter {
     }
   }
 
+  if [source][address] and ![source][ip] {
+    mutate {
+      copy => { "[source][address]" => "[source][ip]" }
+    }
+  }
+
  grok {
     match => {
       "raw_message" =>
@@ -123,6 +129,7 @@ output {
   opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "2sec-siem-%{+yyyy.MM.dd}"
+    pipeline => "2sec-siem-classification-v1"
 
     auth_type => {
       type   => "aws_iam"
