feat: pipeline 제거

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -128,8 +128,7 @@ filter {
 output {
   opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
-    index => "2sec-siem-%{+yyyy.MM.dd}"
-    pipeline => "2sec-siem-classification-v1"
+    index => "2sec-siem-%{+YYYY.MM.dd}"
 
     auth_type => {
       type   => "aws_iam"
