--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -67,54 +67,62 @@ filter {
   }
 
   # --------------------------------------------------
-  # Web Access Log 파싱 (COMBINEDAPACHELOG)
+  # Web Access Log만 grok, 나머지는 Error Log로 분리
   # --------------------------------------------------
-  grok {
-    match => { "raw_message" => "%{COMBINEDAPACHELOG}" }
-    remove_field => ["timestamp"]
-    tag_on_failure => ["_grok_web_failed"]
-  }
-
-  # grok 실패 이벤트는 일단 유지(디버깅).
-  # 운영에서 깨끗한 데이터만 원하면 아래 주석 해제:
-  # if "_grok_web_failed" in [tags] { drop {} }
-
-  # --------------------------------------------------
-  # SIEM 스키마 정규화
-  # - clientip/verb/response/bytes/referrer/agent 등 표준화
-  # - request는 'GET /path?query HTTP/1.1' 형태이므로
-  #   url.original은 path+query로 재구성해서 "원문 URL"로 유지
-  # --------------------------------------------------
-
-  # clientip → ECS 유사: source.address
-  mutate {
-    rename => {
-      "clientip" => "[source][address]"
-      "verb"     => "[http][request][method]"
-      "response" => "[http][response][status_code]"
-      "bytes"    => "[http][response][body][bytes]"
-      "referrer" => "[http][request][referrer]"
-      "agent"    => "[user_agent][original]"
+  if [raw_message] =~ '^\d{1,3}(\.\d{1,3}){3} ' and [raw_message] =~ ' HTTP/' {
+    grok {
+      match => { "raw_message" => "%{COMBINEDAPACHELOG}" }
+      remove_field => ["timestamp"]
+      tag_on_failure => ["_grok_web_failed"]
     }
-  }
 
-  if [source][address] and ![source][ip] {
+    # --------------------------------------------------
+    # SIEM 스키마 정규화
+    # - clientip/verb/response/bytes/referrer/agent 등 표준화
+    # - request는 'GET /path?query HTTP/1.1' 형태이므로
+    #   url.original은 path+query로 재구성해서 "원문 URL"로 유지
+    # --------------------------------------------------
+
+    # clientip → ECS 유사: source.address
     mutate {
-      copy => { "[source][address]" => "[source][ip]" }
+      rename => {
+        "clientip" => "[source][address]"
+        "verb"     => "[http][request][method]"
+        "response" => "[http][response][status_code]"
+        "bytes"    => "[http][response][body][bytes]"
+        "referrer" => "[http][request][referrer]"
+        "agent"    => "[user_agent][original]"
+      }
     }
-  }
 
- grok {
-    match => {
-      "raw_message" =>
-        "\"%{WORD:[http][request][method]} %{URIPATH:url.path}(?:\?%{DATA:url.query})? HTTP/%{NUMBER:http.version}\""
+    if [source][address] and ![source][ip] {
+      mutate {
+        copy => { "[source][address]" => "[source][ip]" }
+      }
     }
-  }
 
-  if [url][path] and [url][query] {
-    mutate { replace => { "[url][original]" => "%{[url][path]}?%{[url][query]}" } }
-  } else if [url][path] {
-    mutate { replace => { "[url][original]" => "%{[url][path]}" } }
+    grok {
+      match => {
+        "raw_message" =>
+          "\"%{WORD:[http][request][method]} %{URIPATH:url.path}(?:\?%{DATA:url.query})? HTTP/%{NUMBER:http.version}\""
+      }
+    }
+
+    if [url][path] and [url][query] {
+      mutate { replace => { "[url][original]" => "%{[url][path]}?%{[url][query]}" } }
+    } else if [url][path] {
+      mutate { replace => { "[url][original]" => "%{[url][path]}" } }
+    }
+  } else if [raw_message] =~ '^\[.+\] \[:\w+\]' {
+    grok {
+      match => {
+        "raw_message" =>
+          "^\[%{DAY:apache.error.day} %{MONTH:apache.error.month} %{MONTHDAY:apache.error.day_num} %{TIME:apache.error.time} %{YEAR:apache.error.year}\] \[%{DATA:apache.error.module}:%{LOGLEVEL:apache.error.level}\] \[pid %{NUMBER:apache.error.pid}\] \[client %{IP:apache.error.client_ip}:%{NUMBER:apache.error.client_port}\] %{GREEDYDATA:apache.error.message}$"
+      }
+      tag_on_failure => ["_grok_errorlog_failed"]
+    }
+  } else if [raw_message] =~ '^==> /var/log/apache2/.* <==$' {
+    drop { }
   }
 
   if [source][address] {
